@@ -1,5 +1,7 @@
 0.11.102
 	+ Use the new EBox::Model::Row api
+	+ Check if there is any added user and show a message
+	  in case there isn't any.
 0.11.101
 	+ New release
 0.11.100
